NEWS - OpenPrinting CUPS Filters v1.14.1 - 2017-06-29
-----------------------------------------------------

CHANGES IN V1.15.0

	- pdftoopvp: Added missing "#include <math.h>" needed for
	  cross-compiling for arm-v7a-linux-gnueabi (Bug #1232).
	- cups-browsed: Prevent the creation of two remote printer
	  entries for two IPP network printers or an IPP network
	  printer and a remote CUPS printer with the same local queue
	  name. This could easily happen with make/model-based naming.
	- cups-browsed: Added the possibility to optionally not
	  create local queues for remote printers for which CUPS
	  (from 2.2.x on) auto-creates queues by itself (DNS-SD
	  advertised driverless printers).
	- cups-browsed: Removed repeated code for clean-up when
	  generate_local_queue() function fails.
	- cups-browsed: Take care of CUPS' temporary queues. Do not
	  consider them when checking whether a queue with the same
	  name as the one we are creating already exists and make
	  temporary queues permanent (or remove them) before
	  overwriting them with our local queue.
	- cups-browsed: Make the naming scheme for locally created
	  print queue configurable, especially allow for naming based
	  on the DNS-SD service name (now default) as this is the same
	  scheme as CUPS uses for its temporary queues. This way we
	  prevent CUPS creating temporary queues when cups-browsed is
	  already creating a queue.
	- cups-browsed: Do not add "APRemoteQueueID" keyword to the
	  local queue's PPD file if the queue is for an IPP network
	  printer.
	- cups-browsed: Skip multiple browse entries for the same
	  printer with interface alias addresses.  Thanks to Edgar
	  Fuss (ef at math dot uni-bonn dot de, Bug #1399).
	- cups-browsed: Improved support for Description (Info) and
	  Location fields of remote CUPS queues. Thanks to Edgar Fuss
	  (ef at math dot uni-bonn dot de, Bug #1398).
	- cups-browsed: Renamed variable names for better code